feat: register building entity from overpass and basic show in map fe

--- a/XCityServer/src/main/resources/application.yaml
+++ b/XCityServer/src/main/resources/application.yaml
@@ -10,6 +10,8 @@ app:
     secret: ${AUTH_SECRET_KEY}
     expirationTime: 200000
   ai-server: ${AI_SERVER_URL}
+  overpass-url: https://overpass-api.de/api/interpreter
+  orion-url: ${ORION-LD-URL}
 
 server:
   port: 8080
