--- a/FE/package.json
+++ b/FE/package.json
@@ -20,10 +20,12 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@turf/turf": "^7.2.0",
     "@types/mapbox__mapbox-gl-geocoder": "^5.1.0",
     "@types/react-webcam": "^1.1.0",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "jsonld": "^8.3.3",
     "mapbox-gl": "^3.16.0",
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.2.0",
@@ -40,9 +42,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/jsonld": "^1.5.15",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/turf": "^3.5.32",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
