--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mapbox/mapbox-gl-draw": "^1.5.1",
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
+    "@mapbox/mapbox-sdk": "^0.16.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-charts": "^8.14.1",
@@ -45,6 +46,7 @@
     "@eslint/js": "^9.36.0",
     "@types/jsonld": "^1.5.15",
     "@types/mapbox__mapbox-gl-draw": "^1.4.9",
+    "@types/mapbox__mapbox-sdk": "^0.16.3",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
