--- a/FE/package.json
+++ b/FE/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-charts": "^8.14.1",
     "@mui/x-date-pickers": "^8.14.1",
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -40,6 +41,8 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/sockjs-client": "^1.5.4",
     "@types/turf": "^3.5.32",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
