--- a/FE/package.json
+++ b/FE/package.json
@@ -27,10 +27,13 @@
     "@types/mapbox__mapbox-gl-geocoder": "^5.1.0",
     "@types/react-webcam": "^1.1.0",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "dayjs": "^1.11.18",
     "jsonld": "^8.3.3",
+    "lucide-react": "^0.553.0",
     "mapbox-gl": "^3.16.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
