--- a/FE/package.json
+++ b/FE/package.json
@@ -28,6 +28,8 @@
     "@types/react-webcam": "^1.1.0",
     "axios": "^1.12.2",
     "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "jsonld": "^8.3.3",
     "lucide-react": "^0.553.0",
