--- a/AI/config/streams_config.json
+++ b/AI/config/streams_config.json
@@ -1,8 +1,8 @@
 [
   {
-    "stream_id": "cam02",
+    "stream_id": "urn:ngsi-ld:Camera:70027910-094d-4567-82bf-341ad3156f8e",
     "video_path": "video2.mp4",
-    "limit_fps": 5,
+    "limit_fps": 3,
     "image_pts": [
       [6, 80],
       [308, 4],
@@ -18,12 +18,7 @@
     "classes": [2, 3, 5, 6],
     "conf": 0.35,
     "tracker_cfg": "bytetrack.yaml",
-    "yolo_weights": "yolo11n.pt",
-
-    "address": {
-      "addressLocality": "Ho Chi Minh City",
-      "addressCountry": "VN",
-      "streetAddress": "Vo Van Kiet"
-    }
+    "yolo_weights": "yolo11n.pt"
   }
+
 ]
