docs: add license headers to source files

--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -1,22 +1,22 @@
-fastapi
-python-multipart
-dotenv
-requests
-openai
-sentence_transformers
-pypdf
-python-docx
-chromadb
-pandas
-langchain-text-splitters
-watchdog
-feedparser
-trafilatura
-lxml_html_clean
-redis
-aiohttp
-osmnx
-opencv-python
-supervision
-ultralytics
-boto3
+fastapi==0.122.0
+python-multipart==0.0.20
+dotenv==0.9.9
+requests==2.32.5
+openai==2.8.1
+sentence_transformers==5.1.2
+pypdf==6.4.0
+python-docx==1.2.0
+chromadb==1.3.5
+pandas==2.3.3
+langchain-text-splitters==1.0.0
+watchdog==6.0.0
+feedparser==6.0.12
+trafilatura==2.0.0
+lxml_html_clean==0.4.3
+redis==7.1.0
+aiohttp==3.13.2
+osmnx==2.0.7
+opencv-python==4.12.0.88
+supervision==0.27.0
+ultralytics==8.3.233
+boto3==1.42.0
