--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.122.0
-python-multipart==0.0.20
+torch==2.5.1
+uvicorn==0.38.0
+fastapi==0.123.5
+python-dateutil==2.9.0.post0
 dotenv==0.9.9
 requests==2.32.5
 openai==2.8.1
@@ -7,16 +9,13 @@ sentence_transformers==5.1.2
 pypdf==6.4.0
 python-docx==1.2.0
 chromadb==1.3.5
-pandas==2.3.3
 langchain-text-splitters==1.0.0
-watchdog==6.0.0
+redis==7.1.0
+opencv-python==4.12.0.88
+python-multipart==0.0.20
 feedparser==6.0.12
 trafilatura==2.0.0
 lxml_html_clean==0.4.3
-redis==7.1.0
-aiohttp==3.13.2
+boto3==1.42.1
 osmnx==2.0.7
-opencv-python==4.12.0.88
 supervision==0.27.0
-ultralytics==8.3.233
-boto3==1.42.0
