--- a/FE/server.conf
+++ b/FE/server.conf
@@ -1,6 +1,6 @@
 upstream backend-service {
     least_conn;
-    server backend:8090;
+    server xcity-backend:8090;
 }
 
 server {
@@ -12,27 +12,48 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    location /backend-service/ws {
-		rewrite /backend-service/(.*) /$1 break;
+    # WebSocket endpoint - must come before general /backend-service/
+    location /backend-service/xcity-service/api/v1/ws/ {
+        rewrite ^/backend-service/(.*)$ /$1 break;
         proxy_pass http://backend-service;
 
-    	proxy_http_version 1.1;
-		
+        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 600s;
         proxy_send_timeout 600s;
-	}
+        proxy_connect_timeout 600s;
+        
+        # Remove problematic security headers for WebSocket
+        proxy_hide_header X-Frame-Options;
+        proxy_hide_header X-Content-Type-Options;
+    }
 
+    # General backend proxy
     location /backend-service/ { 
-        rewrite ^/backend-service/(.*) /$1 break; 
+        rewrite ^/backend-service/(.*)$ /$1 break; 
         proxy_pass http://backend-service;
         
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Allow WebSocket upgrade
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
+}
+
+# WebSocket connection upgrade mapping
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
 }
