--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   mqtt-broker:
     image: eclipse-mosquitto:2
-    container_name: mosquitto
+    container_name: mqtt-broker
     ports:
       - "1883:1883"
       - "9002:9002"
@@ -12,7 +12,8 @@ services:
     stdin_open: true
     tty: true
     networks:
-      - xcity-network
+      xcity-network:
+        ipv4_address: 172.24.0.100
 
   orion-ld:
     image: quay.io/fiware/orion-ld:1.10.0
@@ -22,7 +23,18 @@ services:
       - "1026:1026"
     command: -dbhost mongo
     networks:
-      - xcity-network
+      xcity-network:
+        ipv4_address: 172.24.0.101
+
+  mongo:
+    image: mongo:5
+    container_name: mongo
+    restart: always
+    ports:
+      - "27018:27017"
+    networks:
+      xcity-network:
+        ipv4_address: 172.24.0.102
 
   iot-agent:
     image: fiware/iotagent-json
@@ -31,6 +43,7 @@ services:
     depends_on:
       - mqtt-broker
       - orion-ld
+      - mongo
     ports:
       - "4041:4041"
     environment:
@@ -41,7 +54,8 @@ services:
       - IOTA_MQTT_HOST=mqtt-broker
       - IOTA_MQTT_PORT=1883
       - IOTA_REGISTRY_TYPE=mongodb
-      - IOTA_MONGO_URI=mongodb+srv://nutritrack:OPvS5bLso4NQDHJp@cluster0.x0imgvl.mongodb.net/iotagentjson?retryWrites=true&w=majority
+      - IOTA_MONGO_HOST=mongo
+      - IOTA_MONGO_PORT=27017
       - IOTA_MONGO_DB=iotagentjson
       - IOTA_PROVIDER_URL=http://iot-agent:4041/
       - IOTA_LOG_LEVEL=DEBUG
@@ -50,12 +64,11 @@ services:
       - IOTA_AUTO_REGISTER_DEVICES=false
       - IOTA_AMQP_DISABLED=true
     networks:
-      - xcity-network
+      xcity-network:
+        ipv4_address: 172.24.0.103
 
-  sensor:
-    build:
-      context: ./SensorService
-      dockerfile: Dockerfile
+  xcity-sensor:
+    image: fat1512/sensor:v21
     container_name: xcity-sensor
     ports:
       - "5000:5000"
@@ -63,56 +76,59 @@ services:
       - MQTT_BROKER=mqtt-broker
       - MQTT_PORT=1883
     volumes:
-      - ./SensorService:/app
       - ./SensorService/separated_stations:/app/separated_stations
     depends_on:
       - mqtt-broker
     networks:
-      - xcity-network
+      xcity-network:
+        ipv4_address: 172.24.0.104
     restart: unless-stopped
 
-  backend:
-    build:
-      context: ./XCityServer
-      dockerfile: Dockerfile
+  xcity-backend:
+    image: fat1512/be:v20
     container_name: xcity-backend
     ports:
       - "8090:8090"
     environment:
-      - MONGO_URL=mongodb+srv://nutritrack:OPvS5bLso4NQDHJp@cluster0.x0imgvl.mongodb.net/x-city
-      - AUTH_SECRET_KEY=e62038b1f2a3f81701bca5bc6c8bb0fa862852eac1c92315a8c0dcf54cf46a83
-      - AI_SERVER_URL=http://ai-service:8000
-      - ORION_LD_URL=http://orion:1026
-      - CLIENT_URL=http://frontend:5173
-      - SENSOR_SERVICE=http://sensor:5000
-      - IOT_AGENT=http://iot-agent:4041
+      - MONGO_URL=${MONGO_URL}
+      - AUTH_SECRET_KEY=${AUTH_SECRET_KEY}
+      - ORION_LD_URL=http://orion-ld:1026/ngsi-ld/v1/entities
+      - CLIENT_URL=http://xcity-frontend
+      - SENSOR_SERVICE=http://172.24.0.104:5000/sensor
+      - IOT_AGENT=http://iot-agent:4041/iot
     depends_on:
-      - sensor
+      - xcity-sensor
+      - orion-ld
+      - iot-agent
     networks:
-      - xcity-network
+      xcity-network:
+        ipv4_address: 172.24.0.105
     restart: unless-stopped
 
-  frontend:
-    build:
-      context: ./FE
-      dockerfile: Dockerfile
+  xcity-frontend:
+    image: fat1512/fe:v20
     container_name: xcity-frontend
     ports:
       - "80:80"
       - "443:443"
     environment:
       - VITE_BASE_URL=/backend-service/xcity-service/api/v1
-      - VITE_AI_URL=http://localhost:5000/api/
-      - VITE_CAMERA_AI_URL=ws://localhost:5000/ws/frontend
-      - VITE_MAPBOX_TOKEN=pk.eyJ1IjoidGFubGU5MiIsImEiOiJjbWV2aTFjbHgwam5nMmlweGY4MHB3cDl2In0.iUzhSS3FOsgO_AvlY7m_Kw
+      - VITE_AI_URL=https://ai.tanle.site/api/
+      - VITE_CAMERA_AI_URL=wss://ai.tanle.site/ws/frontend
+      - VITE_MAPBOX_TOKEN=${MAPBOX_TOKEN}
     volumes:
       - ./FE/server.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - backend
+      - xcity-backend
     networks:
-      - xcity-network
+      xcity-network:
+        ipv4_address: 172.24.0.6
     restart: unless-stopped
 
 networks:
   xcity-network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.24.0.0/16
+          gateway: 172.24.0.1
