feat: update building map

--- a/AI/config/streams_config.json
+++ b/AI/config/streams_config.json
@@ -11,15 +11,19 @@
     ],
     "world_pts": [
       [0, 0],
-      [40, 0],
-      [40, 30],
+      [10, 0],
+      [10, 30],
       [0, 35]
     ],
     "classes": [2, 3, 5, 6],
     "conf": 0.35,
     "tracker_cfg": "bytetrack.yaml",
-    "segment_ids": ["1328044064", "1265743180"],
-    "address": "Lê quý đôn"
+    "segment_ids": [
+      1185422227, 1185422676, 1178033815, 1185420427, 1185420369, 1185420036,
+      1185420037, 1185420260, 1185420038, 817147068, 1185420039, 1185419763,
+      1185419486, 1185419485, 1185419173, 1293804362
+    ],
+    "address": "Sư Vạn Hạnh"
   },
   {
     "stream_id": "cam01",
