--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -91,33 +91,12 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/sensor:latest
           cache-to: type=inline
 
-      - name: Update docker-compose.yml with new tags
-        run: |
-          VERSION="${{ steps.version.outputs.version }}"
-          sed -i "s|image: ${{ secrets.DOCKER_USERNAME }}/xcityserver:.*|image: ${{ secrets.DOCKER_USERNAME }}/xcityserver:$VERSION|g" docker-compose.yml
-          sed -i "s|image: ${{ secrets.DOCKER_USERNAME }}/xcityfe:.*|image: ${{ secrets.DOCKER_USERNAME }}/xcityfe:$VERSION|g" docker-compose.yml
-          sed -i "s|image: ${{ secrets.DOCKER_USERNAME }}/sensor:.*|image: ${{ secrets.DOCKER_USERNAME }}/sensor:$VERSION|g" docker-compose.yml
-
-      - name: Upload updated docker-compose.yml
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-compose
-          path: docker-compose.yml
-
   deploy:
     name: Deploy to GCP VM
     runs-on: ubuntu-latest
     needs: build-and-push
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download updated docker-compose.yml
-        uses: actions/download-artifact@v4
-        with:
-          name: docker-compose
-
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
@@ -128,57 +107,18 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Create deployment directory on VM
-        run: |
-          gcloud compute ssh ${{ secrets.GCP_INSTANCE_NAME }} \
-            --zone=${{ secrets.GCP_ZONE }} \
-            --command="mkdir -p ~/pmnm-deploy"
-
-      - name: Copy all project files to VM
-        run: |
-          # Create archive excluding unnecessary files
-          tar --exclude='.git' \
-              --exclude='node_modules' \
-              --exclude='venv' \
-              --exclude='.venv' \
-              --exclude='__pycache__' \
-              --exclude='target' \
-              --exclude='build' \
-              --exclude='dist' \
-              --exclude='.env' \
-              -czf project.tar.gz .
-          
-          # Copy archive to VM
-          gcloud compute scp project.tar.gz ${{ secrets.GCP_INSTANCE_NAME }}:~/ \
-            --zone=${{ secrets.GCP_ZONE }}
-          
-          # Extract on VM
-          gcloud compute ssh ${{ secrets.GCP_INSTANCE_NAME }} \
-            --zone=${{ secrets.GCP_ZONE }} \
-            --command="
-              cd ~/pmnm-deploy
-              tar -xzf ../project.tar.gz
-              rm ../project.tar.gz
-            "
-          
-          # Clean up local archive
-          rm project.tar.gz
-
-      - name: Deploy Main Services
+      - name: Deploy Services
         run: |
           gcloud compute ssh ${{ secrets.GCP_INSTANCE_NAME }} \
             --zone=${{ secrets.GCP_ZONE }} \
             --command="
               cd ~/pmnm-deploy
               
-              # Pull latest images
-              docker-compose pull
+              # Pull latest Docker images
+              docker-compose pull xcity-backend xcity-frontend xcity-sensor
               
-              # Stop and remove old containers
-              docker-compose down
-              
-              # Start services
-              docker-compose up -d
+              # Restart services with new images
+              docker-compose up -d xcity-backend xcity-frontend xcity-sensor
               
               # Clean up unused images
               docker image prune -af
@@ -190,16 +130,11 @@ jobs:
           gcloud compute ssh ${{ secrets.GCP_INSTANCE_NAME }} \
             --zone=${{ secrets.GCP_ZONE }} \
             --command="
-              cd ~/pmnm-deploy
-              
               # Pull latest Airflow images
-              docker-compose -f airflow-docker-compose.yml pull
+              docker-compose -f ~/pmnm-deploy/airflow-docker-compose.yml pull
               
-              # Stop and remove old Airflow containers
-              docker-compose -f airflow-docker-compose.yml down
-              
-              # Start Airflow services
-              docker-compose -f airflow-docker-compose.yml up -d
+              # Restart Airflow services
+              docker-compose -f ~/pmnm-deploy/airflow-docker-compose.yml up -d
             "
 
       - name: Health Check
@@ -238,17 +173,17 @@ jobs:
           gcloud compute ssh ${{ secrets.GCP_INSTANCE_NAME }} \
             --zone=${{ secrets.GCP_ZONE }} \
             --command="
-              cd ~/pmnm-deploy
-              
               echo 'Verifying deployment...'
               
               # Show running containers
               echo 'Running containers:'
-              docker-compose ps
+              docker ps --filter 'name=xcity'
               
               # Show recent logs
               echo 'Recent logs:'
-              docker-compose logs --tail=50
+              docker logs xcity-backend --tail=20
+              docker logs xcity-frontend --tail=20
+              docker logs xcity-sensor --tail=20
             "
 
       - name: Notify Deployment Status
@@ -266,7 +201,8 @@ jobs:
           gcloud compute ssh ${{ secrets.GCP_INSTANCE_NAME }} \
             --zone=${{ secrets.GCP_ZONE }} \
             --command="
-              cd ~/pmnm-deploy
-              docker-compose logs --tail=100
-              docker-compose ps
+              docker logs xcity-backend --tail=100
+              docker logs xcity-frontend --tail=100
+              docker logs xcity-sensor --tail=100
+              docker ps -a
             "
