--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -128,6 +128,13 @@ jobs:
               --exclude='build' \
               --exclude='dist' \
               --exclude='.env' \
+              --exclude='*.log' \
+              --exclude='logs' \
+              --exclude='.pytest_cache' \
+              --exclude='.mypy_cache' \
+              --exclude='coverage' \
+              --exclude='.coverage' \
+              --warning=no-file-changed \
               -czf project.tar.gz .
           
           # Copy archive to VM
